# hal_renesas

./: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/rz/: CMakeLists.txt  README
drivers/rz/fsp/inc/: fsp_common_api.h  fsp_version.h
drivers/rz/fsp/inc/api/: r_adc_api.h  r_can_api.h  r_external_irq_api.h  r_i2c_master_api.h  r_ioport_api.h  r_mhu_api.h  r_spi_api.h  r_timer_api.h  r_transfer_api.h  r_uart_api.h
drivers/rz/fsp/inc/instances/rza/: r_adc_c.h  r_dmac.h  r_rspi.h  r_scif_uart.h
drivers/rz/fsp/inc/instances/rzg/: fsp_common_api.h  fsp_version.h  r_adc_c.h  r_canfd.h  r_dmac_b.h  r_gpt.h  r_gtm.h  r_intc_irq.h  r_intc_nmi.h  r_ioport.h  r_mhu_ns.h  r_riic_master.h  r_rspi.h  r_sci_b_uart.h  r_scif_uart.h
drivers/rz/fsp/inc/instances/rzn/: fsp_version.h  r_adc.h  r_cmtw.h  r_dmac.h  r_gpt.h  r_icu.h  r_iic_master.h  r_spi.h  r_wdt.h  r_xspi_qspi.h
drivers/rz/fsp/inc/instances/rzt/: fsp_version.h  r_adc.h  r_dmac.h  r_gpt.h  r_xspi_qspi.h
drivers/rz/fsp/inc/instances/rzv/: fsp_version.h  r_adc_c.h  r_adc_e.h  r_dmac_b.h  r_gpt.h  r_gtm.h  r_ioport.h  r_mhu_ns.h  r_riic_master.h  r_rspi.h  r_sci_b_uart.h  r_scif_uart.h  r_spi_b.h
drivers/rz/fsp/src/rza/: CMakeLists.txt
drivers/rz/fsp/src/rza/r_adc_c/: r_adc_c.c
drivers/rz/fsp/src/rza/r_dmac/: r_dmac.c
drivers/rz/fsp/src/rza/r_lcdc/: r_lcdc.c
drivers/rz/fsp/src/rzg/: CMakeLists.txt
drivers/rz/fsp/src/rzg/r_adc_c/: r_adc_c.c
drivers/rz/fsp/src/rzg/r_canfd/: r_canfd.c
drivers/rz/fsp/src/rzg/r_dmac_b/: r_dmac_b.c
drivers/rz/fsp/src/rzg/r_gpt/: r_gpt.c
drivers/rz/fsp/src/rzg/r_gtm/: r_gtm.c
drivers/rz/fsp/src/rzg/r_intc_irq/: r_intc_irq.c
drivers/rz/fsp/src/rzg/r_intc_nmi/: r_intc_nmi.c
drivers/rz/fsp/src/rzg/r_ioport/: r_ioport.c
drivers/rz/fsp/src/rzg/r_mhu_ns/: r_mhu_ns.c
drivers/rz/fsp/src/rzg/r_riic_master/: r_riic_master.c
drivers/rz/fsp/src/rzg/r_rspi/: r_rspi.c
drivers/rz/fsp/src/rzg/r_sci_b_uart/: r_sci_b_uart.c
drivers/rz/fsp/src/rzg/r_scif_uart/: r_scif_uart.c
drivers/rz/fsp/src/rzn/: CMakeLists.txt
drivers/rz/fsp/src/rzn/r_adc/: r_adc.c
drivers/rz/fsp/src/rzn/r_cmtw/: r_cmtw.c
drivers/rz/fsp/src/rzn/r_dmac/: r_dmac.c
drivers/rz/fsp/src/rzn/r_gpt/: r_gpt.c
drivers/rz/fsp/src/rzn/r_ioport/: r_ioport.c
drivers/rz/fsp/src/rzn/r_spi/: r_spi.c
drivers/rz/fsp/src/rzn/r_wdt/: r_wdt.c
drivers/rz/fsp/src/rzn/r_xspi_qspi/: r_xspi_qspi.c
drivers/rz/fsp/src/rzt/: CMakeLists.txt
drivers/rz/fsp/src/rzt/r_adc/: r_adc.c
drivers/rz/fsp/src/rzt/r_cmtw/: r_cmtw.c
drivers/rz/fsp/src/rzt/r_dmac/: r_dmac.c
drivers/rz/fsp/src/rzt/r_gpt/: r_gpt.c
drivers/rz/fsp/src/rzt/r_icu/: r_icu.c
drivers/rz/fsp/src/rzt/r_iic_master/: r_iic_master.c
drivers/rz/fsp/src/rzt/r_ioport/: r_ioport.c
drivers/rz/fsp/src/rzt/r_sci_uart/: r_sci_uart.c
drivers/rz/fsp/src/rzt/r_spi/: r_spi.c
drivers/rz/fsp/src/rzt/r_xspi_qspi/: r_xspi_qspi.c
drivers/rz/fsp/src/rzv/: CMakeLists.txt
drivers/rz/fsp/src/rzv/r_adc_c/: r_adc_c.c
drivers/rz/fsp/src/rzv/r_adc_e/: r_adc_e.c
drivers/rz/fsp/src/rzv/r_dmac_b/: r_dmac_b.c
drivers/rz/fsp/src/rzv/r_gpt/: r_gpt.c
drivers/rz/fsp/src/rzv/r_gtm/: r_gtm.c
drivers/rz/fsp/src/rzv/r_intc_irq/: r_intc_irq.c
drivers/rz/fsp/src/rzv/r_ioport/: r_ioport.c
drivers/rz/fsp/src/rzv/r_mhu_ns/: r_mhu_ns.c
drivers/rz/fsp/src/rzv/r_riic_master/: r_riic_master.c
drivers/rz/fsp/src/rzv/r_rspi/: r_rspi.c
drivers/rz/fsp/src/rzv/r_sci_b_uart/: r_sci_b_uart.c
drivers/rz/fsp/src/rzv/r_scif_uart/: r_scif_uart.c
drivers/rz/fsp/src/rzv/r_spi_b/: r_spi_b.c
drivers/rz/ipl/rza/: CMakeLists.txt  README
drivers/rz/ipl/rza/bl2/aarch64/: bl2_el3_entrypoint.S
zephyr/ra/: CMakeLists.txt
zephyr/ra/portable/: CMakeLists.txt  bsp_api.h  bsp_common.h  bsp_irq.h  bsp_linker_info.h  bsp_security.h  bsp_tfu.h
zephyr/ra/portable/inc/: bsp_reset.h  rp_adc.h  rp_agt.h  rp_crc.h  rp_i3c.h  rp_lvd.h  rp_sci_b_spi.h  rp_sci_spi.h  rp_ssi.h  sdram.h
zephyr/ra/portable/src/: sdram.c
zephyr/ra/portable/src/bsp/: bsp_reset.c
zephyr/ra/portable/src/rp_adc/: rp_adc.c
zephyr/ra/portable/src/rp_agt/: rp_agt.c
zephyr/ra/portable/src/rp_crc/: rp_crc.c
zephyr/ra/portable/src/rp_i3c/: rp_i3c.c
zephyr/ra/portable/src/rp_lvd/: rp_lvd.c
zephyr/ra/portable/src/rp_sci_b_spi/: rp_sci_b_spi.c
zephyr/ra/portable/src/rp_sci_spi/: rp_sci_spi.c
zephyr/ra/portable/src/rp_ssi/: rp_ssi.c
zephyr/ra/ra_cfg/: CMakeLists.txt
zephyr/ra/ra_cfg/fsp_cfg/: r_acmphs_cfg.h  r_adc_cfg.h  r_agt_cfg.h  r_canfd_cfg.h  r_ceu_cfg.h  r_crc_cfg.h  r_ctsu_cfg.h  r_dac_cfg.h  r_drw_cfg.h  r_dtc_cfg.h  r_elc_cfg.h  r_ether_cfg.h  r_ether_phy_cfg.h  r_flash_hp_cfg.h  r_flash_lp_cfg.h  r_glcdc_cfg.h  r_gpt_cfg.h  r_gptp_cfg.h  r_i3c_cfg.h  r_iic_b_slave_cfg.h  r_iic_master_cfg.h  r_iic_slave_cfg.h  r_iica_slave_cfg.h  r_ioport_cfg.h  r_ipc_cfg.h  r_layer3_switch_cfg.h  r_lpm_cfg.h  r_lvd_cfg.h  r_mipi_dsi_cfg.h  r_mram_cfg.h  r_ospi_b_cfg.h  r_qspi_cfg.h  r_rmac_cfg.h  r_rmac_phy_cfg.h  r_rtc_cfg.h  r_sau_uart_cfg.h  r_sci_b_i2c_cfg.h  r_sci_b_lin_cfg.h  r_sci_b_spi_cfg.h  r_sci_b_uart_cfg.h  (+12 more)
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra0e1/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra2a1/: bsp_clock_cfg.h  bsp_mcu_device_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra2l1/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra4c1/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra4e1/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra4e2/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_cfg/fsp_cfg/bsp/ra4l1/: bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h
zephyr/ra/ra_gen/: hal_data.h  hal_warmstart.c
(+2521 files in other folders)
